// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptStep component active state before any responses have been submitted matches snapshot 1`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={Array []}
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor"
          disabled={false}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor"
              data-gramm={false}
              disabled={false}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor"
                contentEditable={true}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
            <img
              alt="circle with an x in it"
              className="clear"
              onClick={[Function]}
              src="undefined/images/icons/clear.svg"
            />
          </div>
        </EditorContainer>
        <button
          className="quill-button disabled"
          onClick={[Function]}
          type="button"
        >
          <span>
            Get feedback
          </span>
        </button>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component active state before any responses have been submitted matches snapshot 2`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={Array []}
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor"
          disabled={false}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor"
              data-gramm={false}
              disabled={false}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor"
                contentEditable={true}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
            <img
              alt="circle with an x in it"
              className="clear"
              onClick={[Function]}
              src="undefined/images/icons/clear.svg"
            />
          </div>
        </EditorContainer>
        <button
          className="quill-button disabled"
          onClick={[Function]}
          type="button"
        >
          <span>
            Get feedback
          </span>
        </button>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component active state when a suboptimal response has been submitted matches snapshot 1`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={
    Array [
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
    ]
  }
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor suboptimal"
          disabled={false}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor suboptimal"
              data-gramm={false}
              disabled={false}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor suboptimal"
                contentEditable={true}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={false}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
            <img
              alt="circle with an x in it"
              className="clear"
              onClick={[Function]}
              src="undefined/images/icons/clear.svg"
            />
          </div>
        </EditorContainer>
        <button
          className="quill-button disabled"
          onClick={[Function]}
          type="button"
        >
          <ButtonLoadingSpinner>
            <span
              className="button-loading-spinner-container"
            >
              <img
                alt="spinning circle to indicate loading"
                className="button-loading-spinner"
                src="undefined/images/shared/assigner_still_gray.png"
              />
            </span>
          </ButtonLoadingSpinner>
          <span>
            Get new feedback
          </span>
        </button>
        <Feedback
          lastSubmittedResponse={
            Object {
              "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
              "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
              "feedback_type": "semantic",
              "optimal": false,
              "response_id": 1,
            }
          }
          prompt={
            Object {
              "max_attempts": 5,
              "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
              "prompt_id": 1,
              "text": "Governments should make voting compulsory because",
            }
          }
          submittedResponses={
            Array [
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
            ]
          }
        >
          <div
            className="feedback-section"
          >
            <p
              className="feedback-section-header"
            >
              Feedback
              <span>
                1
                 of 
                5
                 attempts
              </span>
            </p>
            <ReactCSSTransitionReplace
              changeWidth={false}
              childComponent="span"
              component="div"
              notifyLeaving={false}
              overflowHidden={true}
              transitionAppear={true}
              transitionAppearTimeout={400}
              transitionEnter={true}
              transitionEnterTimeout={1000}
              transitionLeave={true}
              transitionLeaveTimeout={400}
              transitionName="fade"
            >
              <div
                style={Object {}}
              >
                <span
                  key="1"
                  style={null}
                >
                  <CSSTransitionGroupChild
                    appear={true}
                    appearTimeout={400}
                    enter={true}
                    enterTimeout={1000}
                    leave={true}
                    leaveTimeout={400}
                    name="fade"
                  >
                    <div
                      className="feedback"
                      key="1"
                    >
                      <img
                        alt="Arrows pointing in opposite directions, making a loop"
                        src="undefined/images/icons/loop.svg"
                      />
                      <p>
                        Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?
                      </p>
                    </div>
                  </CSSTransitionGroupChild>
                </span>
              </div>
            </ReactCSSTransitionReplace>
          </div>
        </Feedback>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component active state when an optimal response has been submitted matches snapshot 1`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={
    Array [
      Object {
        "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
        "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
        "feedback_type": "semantic",
        "optimal": true,
        "response_id": 2,
      },
    ]
  }
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor optimal disabled"
          disabled={true}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor optimal disabled"
              data-gramm={false}
              disabled={true}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor optimal disabled"
                contentEditable={false}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
          </div>
        </EditorContainer>
        <button
          className="quill-button"
          onClick={[Function]}
          type="button"
        >
          <ButtonLoadingSpinner>
            <span
              className="button-loading-spinner-container"
            >
              <img
                alt="spinning circle to indicate loading"
                className="button-loading-spinner"
                src="undefined/images/shared/assigner_still_gray.png"
              />
            </span>
          </ButtonLoadingSpinner>
          <span>
            Start next sentence
          </span>
        </button>
        <Feedback
          lastSubmittedResponse={
            Object {
              "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
              "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
              "feedback_type": "semantic",
              "optimal": true,
              "response_id": 2,
            }
          }
          prompt={
            Object {
              "max_attempts": 5,
              "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
              "prompt_id": 1,
              "text": "Governments should make voting compulsory because",
            }
          }
          submittedResponses={
            Array [
              Object {
                "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
                "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
                "feedback_type": "semantic",
                "optimal": true,
                "response_id": 2,
              },
            ]
          }
        >
          <div
            className="feedback-section"
          >
            <p
              className="feedback-section-header"
            >
              Feedback
              <span>
                1
                 of 
                5
                 attempts
              </span>
            </p>
            <ReactCSSTransitionReplace
              changeWidth={false}
              childComponent="span"
              component="div"
              notifyLeaving={false}
              overflowHidden={true}
              transitionAppear={true}
              transitionAppearTimeout={400}
              transitionEnter={true}
              transitionEnterTimeout={1000}
              transitionLeave={true}
              transitionLeaveTimeout={400}
              transitionName="fade"
            >
              <div
                style={Object {}}
              >
                <span
                  key="1"
                  style={null}
                >
                  <CSSTransitionGroupChild
                    appear={true}
                    appearTimeout={400}
                    enter={true}
                    enterTimeout={1000}
                    leave={true}
                    leaveTimeout={400}
                    name="fade"
                  >
                    <div
                      className="feedback optimal"
                      key="1"
                    >
                      <img
                        alt="Small green circle with a check in it"
                        src="undefined/images/icons/check-circle-small.svg"
                      />
                      <p>
                        That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.
                      </p>
                    </div>
                  </CSSTransitionGroupChild>
                </span>
              </div>
            </ReactCSSTransitionReplace>
          </div>
        </Feedback>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component active state when the max attempts have been reached matches snapshot 1`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={
    Array [
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
      Object {
        "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
        "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
        "feedback_type": "semantic",
        "optimal": false,
        "response_id": 1,
      },
    ]
  }
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor suboptimal disabled"
          disabled={true}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor suboptimal disabled"
              data-gramm={false}
              disabled={true}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor suboptimal disabled"
                contentEditable={false}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
          </div>
        </EditorContainer>
        <button
          className="quill-button"
          onClick={[Function]}
          type="button"
        >
          <ButtonLoadingSpinner>
            <span
              className="button-loading-spinner-container"
            >
              <img
                alt="spinning circle to indicate loading"
                className="button-loading-spinner"
                src="undefined/images/shared/assigner_still_gray.png"
              />
            </span>
          </ButtonLoadingSpinner>
          <span>
            Start next sentence
          </span>
        </button>
        <Feedback
          lastSubmittedResponse={
            Object {
              "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
              "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
              "feedback_type": "semantic",
              "optimal": false,
              "response_id": 1,
            }
          }
          prompt={
            Object {
              "max_attempts": 5,
              "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
              "prompt_id": 1,
              "text": "Governments should make voting compulsory because",
            }
          }
          submittedResponses={
            Array [
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
              Object {
                "entry": "Governments should make voting compulsory so that more voices are heard in elections.",
                "feedback": "Good start! You stated that compulsory voting will ensure that more voices are heard. Now take it one step further—according to the passage, why is it important that more voices are heard?",
                "feedback_type": "semantic",
                "optimal": false,
                "response_id": 1,
              },
            ]
          }
        >
          <div
            className="feedback-section"
          >
            <p
              className="feedback-section-header"
            >
              Feedback
              <span>
                5
                 of 
                5
                 attempts
              </span>
            </p>
            <ReactCSSTransitionReplace
              changeWidth={false}
              childComponent="span"
              component="div"
              notifyLeaving={false}
              overflowHidden={true}
              transitionAppear={true}
              transitionAppearTimeout={400}
              transitionEnter={true}
              transitionEnterTimeout={1000}
              transitionLeave={true}
              transitionLeaveTimeout={400}
              transitionName="fade"
            >
              <div
                style={Object {}}
              >
                <span
                  key="1"
                  style={null}
                >
                  <CSSTransitionGroupChild
                    appear={true}
                    appearTimeout={400}
                    enter={true}
                    enterTimeout={1000}
                    leave={true}
                    leaveTimeout={400}
                    name="fade"
                  >
                    <div
                      className="feedback"
                      key="5"
                    >
                      <img
                        alt="Arrows pointing in opposite directions, making a loop"
                        src="undefined/images/icons/loop.svg"
                      />
                      <p>
                        Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.
                      </p>
                    </div>
                  </CSSTransitionGroupChild>
                </span>
              </div>
            </ReactCSSTransitionReplace>
          </div>
        </Feedback>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component active state when the max attempts have been reached or the last answer is optimal and every other question has been completed matches snapshot 1`] = `
<PromptStep
  active={true}
  className="step active"
  completeStep={[Function]}
  everyOtherStepCompleted={true}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={
    Array [
      Object {
        "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
        "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
        "feedback_type": "semantic",
        "optimal": true,
        "response_id": 2,
      },
    ]
  }
>
  <div
    className="step active"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
      <div
        className="active-content-container"
      >
        <EditorContainer
          className="editor optimal disabled"
          disabled={true}
          handleTextChange={[Function]}
          html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
          innerRef={[Function]}
          promptText="Governments should make voting compulsory because"
          resetText={[Function]}
          stripHtml={[Function]}
        >
          <div
            className="editor-container"
          >
            <ContentEditable
              className="editor optimal disabled"
              data-gramm={false}
              disabled={true}
              html="<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>"
              innerRef={[Function]}
              onChange={[Function]}
              spellCheck={false}
            >
              <div
                className="editor optimal disabled"
                contentEditable={false}
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Governments should make voting compulsory <u>because</u>&nbsp;</p>",
                  }
                }
                data-gramm={false}
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                spellCheck={false}
              />
            </ContentEditable>
          </div>
        </EditorContainer>
        <button
          className="quill-button"
          onClick={[Function]}
          type="button"
        >
          <ButtonLoadingSpinner>
            <span
              className="button-loading-spinner-container"
            >
              <img
                alt="spinning circle to indicate loading"
                className="button-loading-spinner"
                src="undefined/images/shared/assigner_still_gray.png"
              />
            </span>
          </ButtonLoadingSpinner>
          <span>
            Done
          </span>
        </button>
        <Feedback
          lastSubmittedResponse={
            Object {
              "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
              "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
              "feedback_type": "semantic",
              "optimal": true,
              "response_id": 2,
            }
          }
          prompt={
            Object {
              "max_attempts": 5,
              "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
              "prompt_id": 1,
              "text": "Governments should make voting compulsory because",
            }
          }
          submittedResponses={
            Array [
              Object {
                "entry": "Governments should make voting compulsory so that the elected government represents the majority of the population.",
                "feedback": "That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.",
                "feedback_type": "semantic",
                "optimal": true,
                "response_id": 2,
              },
            ]
          }
        >
          <div
            className="feedback-section"
          >
            <p
              className="feedback-section-header"
            >
              Feedback
              <span>
                1
                 of 
                5
                 attempts
              </span>
            </p>
            <ReactCSSTransitionReplace
              changeWidth={false}
              childComponent="span"
              component="div"
              notifyLeaving={false}
              overflowHidden={true}
              transitionAppear={true}
              transitionAppearTimeout={400}
              transitionEnter={true}
              transitionEnterTimeout={1000}
              transitionLeave={true}
              transitionLeaveTimeout={400}
              transitionName="fade"
            >
              <div
                style={Object {}}
              >
                <span
                  key="1"
                  style={null}
                >
                  <CSSTransitionGroupChild
                    appear={true}
                    appearTimeout={400}
                    enter={true}
                    enterTimeout={1000}
                    leave={true}
                    leaveTimeout={400}
                    name="fade"
                  >
                    <div
                      className="feedback optimal"
                      key="1"
                    >
                      <img
                        alt="Small green circle with a check in it"
                        src="undefined/images/icons/check-circle-small.svg"
                      />
                      <p>
                        That's a really strong sentence! You used evidence from the text to identify why governments should make voting compulsory.
                      </p>
                    </div>
                  </CSSTransitionGroupChild>
                </span>
              </div>
            </ReactCSSTransitionReplace>
          </div>
        </Feedback>
      </div>
    </div>
  </div>
</PromptStep>
`;

exports[`PromptStep component inactive state renders 1`] = `
<PromptStep
  active={false}
  className="step"
  completeStep={[Function]}
  everyOtherStepCompleted={false}
  onClick={[Function]}
  passedRef={[Function]}
  prompt={
    Object {
      "max_attempts": 5,
      "max_attempts_feedback": "Nice effort! You made some strong revisions. Here is an example of a strong response. What is similar or different about your response? 

 Governments should make voting compulsory because otherwise not everyone will vote.",
      "prompt_id": 1,
      "text": "Governments should make voting compulsory because",
    }
  }
  stepNumberComponent={<span />}
  submitResponse={[Function]}
  submittedResponses={Array []}
>
  <div
    className="step"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="step-content"
    >
      <div
        className="step-header"
      >
        <span />
        <p
          className="directions"
        >
          Use information from the text to finish the sentence:
        </p>
      </div>
      <p
        className="prompt-text"
      >
        Governments should make voting compulsory
         
        <span>
          because
        </span>
      </p>
    </div>
  </div>
</PromptStep>
`;
